<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/titleImgView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="180dp"
        android:maxHeight="180dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:src="@drawable/test_image"/>

    <TextView
        android:id="@+id/titleBigText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleBigText"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/titleSmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="17sp"
        android:text="@string/titleSmallText"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_OK"
        android:textSize="17sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_Setting"
        android:background="@color/colorBackground"
        android:textSize="17sp"/>

</LinearLayout>