<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/titleLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_close"
            android:maxWidth="48dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mainTitle"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_yes"
            android:maxWidth="48dp"
            android:adjustViewBounds="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainTitleLine"
        app:layout_constraintTop_toBottomOf="@+id/titleLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:inputType="text"
            android:hint="@string/hintTitle"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_layer"
            android:maxWidth="48dp"
            android:adjustViewBounds="true"/>

    </LinearLayout>

    <EditText
        android:id="@+id/subTitleLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mainTitleLine"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        android:hint="@string/hintSubTitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/subTitleLine"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hintContent"/>

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/icon_photo"
        android:maxWidth="48dp"
        android:adjustViewBounds="true"/>

    <ImageView
        android:id="@+id/imgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/imgPhoto"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/icon_color"
        android:maxWidth="48dp"
        android:adjustViewBounds="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/imgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/icon_align"
        android:maxWidth="48dp"
        android:adjustViewBounds="true"/>

</android.support.constraint.ConstraintLayout>